--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -97,7 +97,64 @@
             "newClass": "Νέα τάξη",
             "bookingsOpened": "Οι κρατήσεις άνοιξαν με επιτυχία",
             "bookingsClosed": "Οι κρατήσεις έκλεισαν με επιτυχία",
-            "failedToUpdateBookingStatus": "Αποτυχία ενημέρωσης κατάστασης κράτησης"
+            "failedToUpdateBookingStatus": "Αποτυχία ενημέρωσης κατάστασης κράτησης",
+            "scheduleClass": {
+                "title": "Προγραμματισμός Τάξης",
+                "description": "Δημιουργήστε μια νέα τάξη από ένα από τα πρότυπά σας",
+                "dateTime": "Ημερομηνία & Ώρα",
+                "selectDateTime": "Επιλέξτε ημερομηνία και ώρα",
+                "dateTimeInPast": "Η επιλεγμένη ημερομηνία και ώρα είναι στο παρελθόν.",
+                "classTemplate": "Πρότυπο Τάξης",
+                "loadingTemplates": "Φόρτωση προτύπων...",
+                "selectTemplate": "Επιλέξτε ένα πρότυπο",
+                "noTemplatesFound": "Δεν βρέθηκαν πρότυπα",
+                "noTemplatesDescription": "Χρειάζεται να δημιουργήσετε πρότυπα τάξεων πριν μπορέσετε να προγραμματίσετε τάξεις",
+                "createTemplates": "Νέες υπηρεσίες",
+                "makeRecurring": "Κάντε το επαναλαμβανόμενο",
+                "frequency": "Συχνότητα",
+                "daily": "Καθημερινά",
+                "weekly": "Εβδομαδιαία",
+                "duration": "Διάρκεια",
+                "weeks": "εβδομάδες",
+                "daysOfWeek": "Ημέρες της εβδομάδας",
+                "selectAtLeastOneDay": "Παρακαλώ επιλέξτε τουλάχιστον μια ημέρα της εβδομάδας.",
+                "scheduling": "Προγραμματισμός...",
+                "scheduleSeries": "Προγραμματισμός Σειράς",
+                "scheduleClassButton": "Προγραμματισμός Τάξης",
+                "createdInstancesSuccess": "Δημιουργήθηκαν {{count}} περιπτώσεις του {{name}}",
+                "scheduledSuccess": "Το {{name}} προγραμματίστηκε με επιτυχία!",
+                "failedToSchedule": "Αποτυχία προγραμματισμού τάξης. Παρακαλώ δοκιμάστε ξανά."
+            },
+            "eventMenu": {
+                "viewBookings": "Προβολή Κρατήσεων",
+                "openBookings": "Άνοιγμα κρατήσεων",
+                "closeBookings": "Κλείσιμο κρατήσεων",
+                "edit": "Επεξεργασία",
+                "delete": "Διαγραφή"
+            },
+            "editClass": {
+                "title": "Επεξεργασία Τάξης",
+                "startTime": "Ώρα Έναρξης",
+                "startTimeRequired": "Η ώρα έναρξης είναι υποχρεωτική",
+                "className": "Όνομα Τάξης",
+                "applyToAllFuture": "Εφαρμογή σε όλα τα μελλοντικά συμβάντα",
+                "updating": "Ενημέρωση...",
+                "updateClass": "Ενημέρωση τάξης",
+                "updateClasses": "Ενημέρωση {{count}} τάξεων",
+                "classUpdatedSuccess": "Η τάξη ενημερώθηκε με επιτυχία!",
+                "classesUpdatedSuccess": "Ενημερώθηκαν {{count}} παρόμοιες τάξεις με επιτυχία!",
+                "failedToUpdateClass": "Αποτυχία ενημέρωσης τάξης.",
+                "failedToUpdateClasses": "Αποτυχία ενημέρωσης παρόμοιων τάξεων."
+            },
+            "daysOfWeek": {
+                "monday": "Δευτέρα",
+                "tuesday": "Τρίτη",
+                "wednesday": "Τετάρτη",
+                "thursday": "Πέμπτη",
+                "friday": "Παρασκευή",
+                "saturday": "Σάββατο",
+                "sunday": "Κυριακή"
+            }
         },
         "templates": {
             "title": "Υπηρεσίες",
@@ -110,14 +167,29 @@
             "failedToDeleteTemplate": "Αποτυχία διαγραφής προτύπου. Παρακαλώ δοκιμάστε ξανά.",
             "loadMore": "Φόρτωση Περισσότερων",
             "loadingMore": "Φόρτωση περισσότερων...",
-            "createTemplate": "Δημιουργία Προτύπου",
-            "editTemplate": "Επεξεργασία Προτύπου",
+            "createTemplate": "Νέα υπηρεσία",
+            "editTemplate": "Επεξεργασία",
             "classDetails": "Λεπτομέρειες Τάξης",
             "classSettings": "Ρυθμίσεις Τάξης",
             "bookingRules": "Κανόνες Κράτησης",
             "bookingWindow": "Παράθυρο Κράτησης",
             "refundPolicy": "Πολιτική Επιστροφής",
             "discountRules": "Κανόνες Έκπτωσης",
+            "discountRulesForm": {
+                "title": "Κανόνες Έκπτωσης",
+                "addRule": "Προσθήκη Κανόνα",
+                "noRulesConfigured": "Δεν έχουν ρυθμιστεί κανόνες έκπτωσης",
+                "noRulesDescription": "Προσθέστε κανόνες για να προσφέρετε εκπτώσεις πρώιμης κράτησης ή τελευταίας στιγμής",
+                "type": "Τύπος",
+                "amount": "Ποσό ({{currency}})",
+                "earlyBookingApplies": "Η έκπτωση πρώιμης κράτησης ισχύει:",
+                "lastMinuteApplies": "Η έκπτωση τελευταίας στιγμής ισχύει:",
+                "hoursOrMoreBefore": "ώρες ή περισσότερο πριν την έναρξη της τάξης",
+                "hoursOrLessBefore": "ώρες ή λιγότερο πριν την έναρξη της τάξης",
+                "allClassesDiscount": "Όλες οι τάξεις λαμβάνουν έκπτωση {{currency}} {{amount}}.",
+                "earlyBookingDiscount": "Οι τάξεις που κρατούνται {{hours}}+ ώρες νωρίτερα λαμβάνουν έκπτωση {{currency}} {{amount}}.",
+                "lastMinuteDiscount": "Οι τάξεις που ξεκινούν στις επόμενες {{hours}} ώρες λαμβάνουν έκπτωση {{currency}} {{amount}}."
+            },
             "classNamePlaceholder": "π.χ., Αρχάριος Γιόγκα",
             "instructorPlaceholder": "Όνομα εκπαιδευτή",
             "descriptionPlaceholder": "Περιγράψτε την τάξη...",
@@ -144,7 +216,28 @@
             "alwaysOn": "Πάντα Ενεργό",
             "earlyBooking": "Πρώιμη Κράτηση",
             "lastMinute": "Τελευταία Στιγμή",
-            "discount": "Έκπτωση"
+            "discount": "Έκπτωση",
+            "dialog": {
+                "createTitle": "Νέα υπηρεσία",
+                "editTitle": "Επεξεργασία",
+                "className": "Όνομα Τάξης",
+                "classCategory": "Κατηγορία Τάξης",
+                "tags": "Ετικέτες",
+                "colorTheme": "Χρώμα",
+                "openBookings": "Άνοιγμα κρατήσεων",
+                "closeBookings": "Κλείσιμο κρατήσεων",
+                "hoursBeforeClass": "ώρες πριν την τάξη",
+                "startWithBookingsDisabled": "Έναρξη με απενεργοποιημένες κρατήσεις",
+                "creating": "Δημιουργία...",
+                "updating": "Ενημέρωση...",
+                "createThisTemplate": "Δημιουργία αυτού του προτύπου",
+                "updateTemplate": "Ενημέρωση Προτύπου",
+                "templateCreatedSuccess": "Το πρότυπο τάξης δημιουργήθηκε με επιτυχία",
+                "templateUpdatedSuccess": "Το πρότυπο τάξης ενημερώθηκε με επιτυχία",
+                "failedToCreateTemplate": "Αποτυχία δημιουργίας προτύπου τάξης.",
+                "failedToUpdateTemplate": "Αποτυχία ενημέρωσης προτύπου τάξης.",
+                "maxBookingHoursMustBeGreater": "Οι μέγιστες ώρες κράτησης πρέπει να είναι μεγαλύτερες από τις ελάχιστες"
+            }
         },
         "earnings": {
             "title": "Έσοδα",
@@ -288,7 +381,13 @@
             "available": "Διαθέσιμα:",
             "waitlist": "Λίστα αναμονής:",
             "noBookings": "Δεν υπάρχουν κρατήσεις ακόμα",
-            "noBookingsDescription": "Αυτή η τάξη δεν έχει κρατήσεις ακόμα."
+            "noBookingsDescription": "Αυτή η τάξη δεν έχει κρατήσεις ακόμα.",
+            "viewDialog": {
+                "title": "{{className}} Κρατήσεις",
+                "currentBookings": "Τρέχουσες Κρατήσεις",
+                "noBookingsYet": "Δεν υπάρχουν κρατήσεις ακόμα",
+                "noBookingsDescription": "Οι πελάτες δεν έχουν κάνει κράτηση για αυτή την τάξη ακόμα"
+            }
         },
         "messages": {
             "title": "Μηνύματα",
