--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -104,11 +104,11 @@
                 "dateTime": "Ημερομηνία & Ώρα",
                 "selectDateTime": "Επιλέξτε ημερομηνία και ώρα",
                 "dateTimeInPast": "Η επιλεγμένη ημερομηνία και ώρα είναι στο παρελθόν.",
-                "classTemplate": "Πρότυπο Τάξης",
-                "loadingTemplates": "Φόρτωση προτύπων...",
-                "selectTemplate": "Επιλέξτε ένα πρότυπο",
-                "noTemplatesFound": "Δεν βρέθηκαν πρότυπα",
-                "noTemplatesDescription": "Χρειάζεται να δημιουργήσετε πρότυπα τάξεων πριν μπορέσετε να προγραμματίσετε τάξεις",
+                "classTemplate": "Υπηρεσία",
+                "loadingTemplates": "Φόρτωση υπηρεσιών...",
+                "selectTemplate": "Επιλέξτε μια υπηρεσία",
+                "noTemplatesFound": "Δεν βρέθηκαν υπηρεσίες",
+                "noTemplatesDescription": "Χρειάζεται να δημιουργήσετε υπηρεσίες πριν μπορέσετε να προγραμματίσετε τάξεις",
                 "createTemplates": "Νέες υπηρεσίες",
                 "makeRecurring": "Κάντε το επαναλαμβανόμενο",
                 "frequency": "Συχνότητα",
@@ -174,11 +174,11 @@
             "bookingRules": "Κανόνες Κράτησης",
             "bookingWindow": "Παράθυρο Κράτησης",
             "refundPolicy": "Πολιτική Επιστροφής",
-            "discountRules": "Κανόνες Έκπτωσης",
+            "discountRules": "Εκπτώσεις",
             "discountRulesForm": {
-                "title": "Κανόνες Έκπτωσης",
-                "addRule": "Προσθήκη Κανόνα",
-                "noRulesConfigured": "Δεν έχουν ρυθμιστεί κανόνες έκπτωσης",
+                "title": "Εκπτώσεις",
+                "addRule": "Προσθήκη",
+                "noRulesConfigured": "Δεν έχουν ρυθμιστεί εκπτώσεις",
                 "noRulesDescription": "Προσθέστε κανόνες για να προσφέρετε εκπτώσεις πρώιμης κράτησης ή τελευταίας στιγμής",
                 "type": "Τύπος",
                 "amount": "Ποσό ({{currency}})",
@@ -218,7 +218,7 @@
             "lastMinute": "Τελευταία Στιγμή",
             "discount": "Έκπτωση",
             "dialog": {
-                "createTitle": "Νέα υπηρεσία",
+                "createTitle": "Νέα υπηρεσία ",
                 "editTitle": "Επεξεργασία",
                 "className": "Όνομα Τάξης",
                 "classCategory": "Κατηγορία Τάξης",
@@ -396,6 +396,27 @@
             "noConversationsDescription": "Δεν έχετε μηνύματα ακόμα.",
             "typeYourMessage": "Πληκτρολογήστε το μήνυμά σας...",
             "send": "Αποστολή"
+        },
+        "notificationsPopover": {
+            "title": "Ειδοποιήσεις",
+            "unreadCount": "Έχετε {{count}} μη αναγνωσμένη ειδοποίηση",
+            "unreadCountPlural": "Έχετε {{count}} μη αναγνωσμένες ειδοποιήσεις",
+            "noNotifications": "Δεν υπάρχουν ειδοποιήσεις.",
+            "loadingNotifications": "Φόρτωση ειδοποιήσεων...",
+            "loadMore": "Φόρτωση περισσότερων",
+            "justNow": "Μόλις τώρα",
+            "minAgo": "{{count}} λεπτά πριν",
+            "hourAgo": "{{count}} ώρα πριν",
+            "hoursAgo": "{{count}} ώρες πριν",
+            "dayAgo": "{{count}} ημέρα πριν",
+            "daysAgo": "{{count}} ημέρες πριν",
+            "customer": "Πελάτης",
+            "class": "Τάξη",
+            "timeTbd": "Ώρα να καθοριστεί",
+            "actionBooked": "έκανε κράτηση",
+            "actionCancelled": "ακύρωσε",
+            "actionPaidFor": "πλήρωσε για",
+            "actionUpdated": "ενημερώθηκε"
         },
         "onboarding": {
             "title": "Ολοκληρώστε το Προφίλ της Επιχείρησής σας",
