Even more translations

--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -45,8 +45,8 @@
         "date": "Ημερομηνία",
         "time": "Ώρα",
         "status": "Κατάσταση",
-        "venue": "Χώρος",
-        "venues": "Χώροι",
+        "venue": "Αίθουσα",
+        "venues": "Αίθουσες",
         "bookings": "Κρατήσεις",
         "booking": "Κράτηση",
         "participants": "Συμμετέχοντες",
@@ -55,7 +55,7 @@
         "priceInEuros": "Τιμή σε Ευρώ",
         "general": "Γενικά",
         "unknownUser": "Άγνωστος Χρήστης",
-        "unknownVenue": "Άγνωστος Χώρος",
+        "unknownVenue": "Άγνωστη Αίθουσα",
         "noMessagesYet": "Δεν υπάρχουν μηνύματα ακόμα",
         "justNow": "Μόλις τώρα",
         "yesterday": "Χθες",
@@ -194,14 +194,14 @@
             "instructorPlaceholder": "Όνομα εκπαιδευτή",
             "descriptionPlaceholder": "Περιγράψτε την τάξη...",
             "selectCategory": "Επιλέξτε κατηγορία",
-            "selectVenue": "Επιλέξτε χώρο",
+            "selectVenue": "Επιλέξτε αίθουσα",
             "selectDuration": "Επιλέξτε διάρκεια",
             "tagsPlaceholder": "Πληκτρολογήστε μια ετικέτα και πατήστε Enter",
             "priceBetween": "Η τιμή πρέπει να είναι μεταξύ €1.00 και €100.00",
             "capacityGreaterThanZero": "Η χωρητικότητα πρέπει να είναι μεγαλύτερη από 0",
             "classNameRequired": "Το όνομα τάξης είναι υποχρεωτικό",
             "instructorRequired": "Το όνομα εκπαιδευτή είναι υποχρεωτικό",
-            "venueRequired": "Ο χώρος είναι υποχρεωτικός",
+            "venueRequired": "Η αίθουσα είναι υποχρεωτική",
             "categoryRequired": "Η κατηγορία είναι υποχρεωτική",
             "durationRequired": "Η διάρκεια είναι υποχρεωτική",
             "priceRequired": "Η τιμή είναι υποχρεωτική",
@@ -271,7 +271,7 @@
         },
         "settings": {
             "title": "Ρυθμίσεις",
-            "venues": "Χώροι",
+            "venues": "Αίθουσες",
             "businessDetails": "Λεπτομέρειες Επιχείρησης",
             "basicInformation": "Βασικές Πληροφορίες",
             "businessName": "Όνομα Επιχείρησης",
@@ -287,21 +287,55 @@
             "instagramPlaceholder": "https://instagram.com/yourvenue",
             "facebookPlaceholder": "https://facebook.com/yourvenue",
             "youtubePlaceholder": "https://youtube.com/yourvenue",
-            "noVenueFound": "Δεν βρέθηκε χώρος για την επιχείρησή σας.",
+            "noVenueFound": "Δεν βρέθηκε αίθουσα για την επιχείρησή σας.",
             "socialMedia": "Κοινωνικά Δίκτυα",
             "instagram": "Instagram",
             "facebook": "Facebook",
             "youtube": "YouTube",
             "venueNamePlaceholder": "π.χ., Κύρια Αίθουσα",
             "venueEmailPlaceholder": "venue@example.com",
-            "venueDescriptionPlaceholder": "Περιγράψτε αυτόν τον χώρο...",
+            "venueDescriptionPlaceholder": "Περιγράψτε αυτήν την αίθουσα...",
             "selectBusinessCategory": "Επιλέξτε κατηγορία επιχείρησης",
             "venuePhonePlaceholder": "+30 123 456 7890",
             "venueWebsitePlaceholder": "https://example.com",
-            "addAnotherVenue": "Προσθήκη άλλου χώρου",
-            "createVenue": "Δημιουργία Χώρου",
-            "editVenue": "Επεξεργασία Χώρου",
-            "venueNameRequired": "Το όνομα χώρου είναι υποχρεωτικό",
+            "addAnotherVenue": "Νέα Αίθουσα",
+            "yourVenues": "Οι Αίθουσές σας",
+            "yourVenuesDescription": "Αυτοί είναι οι χώροι όπου διδάσκετε τις τάξεις σας. Αν όλες οι τάξεις σας γίνονται στην ίδια τοποθεσία, δεν χρειάζεται να προσθέσετε περισσότερες αίθουσες. Μπορείτε να ενημερώσετε την υπάρχουσα αίθουσα σας με νέες λεπτομέρειες, υπηρεσίες που παρέχετε, κ.λπ.",
+            "noLocationsYet": "Δεν υπάρχουν ακόμη τοποθεσίες",
+            "addFirstLocation": "Προσθέστε την πρώτη σας τοποθεσία για να ξεκινήσετε τη διαχείριση των επιχειρηματικών σας χώρων.",
+            "createVenue": "Δημιουργία Αίθουσας",
+            "venueCard": {
+                "amenities": "Απολαύσεις",
+                "noAmenitiesFound": "Δεν βρέθηκαν απολαύσεις",
+                "services": "Υπηρεσίες",
+                "venueImages": "Εικόνες Αίθουσας",
+                "addImage": "Νέα Εικόνα",
+                "uploading": "Ανέβασμα...",
+                "preparing": "Προετοιμασία...",
+                "noImagesUploaded": "Δεν έχουν ανέβει εικόνες ακόμη.",
+                "addressNotAvailable": "Η διεύθυνση δεν είναι διαθέσιμη",
+                "readMore": "Δείτε περισσότερα",
+                "readLess": "Δείτε λιγότερα",
+                "edit": "Επεξεργασία",
+                "delete": "Διαγραφή",
+                "openMenu": "Άνοιγμα μενού",
+                "venueImage": "Εικόνα αίθουσας",
+                "enlargedPreview": "Ευρυμένη προεπισκόπηση εικόνας αίθουσας",
+                "deleteImage": "Διαγραφή εικόνας",
+                "deleteImageConfirmTitle": "Είστε απολύτως σίγουροι;",
+                "deleteImageConfirmDescription": "Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Αυτό θα αφαιρέσει μόνιμα την εικόνα από την αίθουσά σας.",
+                "cancel": "Ακύρωση",
+                "continue": "Συνέχεια",
+                "noVenueDataAvailable": "Δεν υπάρχουν διαθέσιμα δεδομένα αίθουσας",
+                "maxImagesError": "Μπορείτε να ανεβάσετε μέχρι {{max}} εικόνες ανά αίθουσα.",
+                "imageRemovedSuccess": "Η εικόνα έχει αφαιρεθεί από την αίθουσα.",
+                "failedToRemoveImage": "Αποτυχία αφαίρεσης εικόνας.",
+                "amenityShowers": "Ντουζιέρες",
+                "amenityAccessible": "Προσβάσιμο",
+                "amenityMats": "Στόρωνες"
+            },
+            "editVenue": "Επεξεργασία Αίθουσας",
+            "venueNameRequired": "Το όνομα αίθουσας είναι υποχρεωτικό",
             "emailRequired": "Το email είναι υποχρεωτικό",
             "streetRequired": "Η οδός είναι υποχρεωτική",
             "cityRequired": "Η πόλη είναι υποχρεωτική",
