--- a/apps/web-business/src/locales/lt.json
+++ b/apps/web-business/src/locales/lt.json
@@ -299,7 +299,41 @@
       "venuePhonePlaceholder": "+30 123 456 7890",
       "venueWebsitePlaceholder": "https://example.com",
       "addAnotherVenue": "Pridėti kitą vietą",
+      "yourVenues": "Jūsų Vietos",
+      "yourVenuesDescription": "Tai yra vietos, kuriose vedate savo pamokas. Jei visos jūsų pamokos vyksta toje pačioje vietoje, jums nereikia pridėti daugiau vietų. Galite atnaujinti esamą vietą naujomis detalėmis, teikiamomis paslaugomis ir pan.",
+      "noLocationsYet": "Dar nėra vietų",
+      "addFirstLocation": "Pridėkite savo pirmąją vietą, kad pradėtumėte valdyti savo verslo vietas.",
       "createVenue": "Sukurti Vietą",
+      "venueCard": {
+        "amenities": "Patogumai",
+        "noAmenitiesFound": "Patogumų nerasta",
+        "services": "Paslaugos",
+        "venueImages": "Vietos Nuotraukos",
+        "addImage": "Pridėti Nuotrauką",
+        "uploading": "Įkeliama...",
+        "preparing": "Ruošiama...",
+        "noImagesUploaded": "Dar neįkeltos nuotraukos.",
+        "addressNotAvailable": "Adresas nepasiekiamas",
+        "readMore": "Skaityti daugiau",
+        "readLess": "Skaityti mažiau",
+        "edit": "Redaguoti",
+        "delete": "Ištrinti",
+        "openMenu": "Atidaryti meniu",
+        "venueImage": "Vietos nuotrauka",
+        "enlargedPreview": "Padidinta vietos nuotraukos peržiūra",
+        "deleteImage": "Ištrinti nuotrauką",
+        "deleteImageConfirmTitle": "Ar tikrai tikrai?",
+        "deleteImageConfirmDescription": "Šis veiksmas negali būti atšauktas. Tai visam laikui pašalins nuotrauką iš jūsų vietos.",
+        "cancel": "Atšaukti",
+        "continue": "Tęsti",
+        "noVenueDataAvailable": "Vietos duomenys nepasiekiami",
+        "maxImagesError": "Galite įkelti iki {{max}} nuotraukų kiekvienai vietai.",
+        "imageRemovedSuccess": "Nuotrauka buvo pašalinta iš vietos.",
+        "failedToRemoveImage": "Nepavyko pašalinti nuotraukos.",
+        "amenityShowers": "Dušai",
+        "amenityAccessible": "Prieinama",
+        "amenityMats": "Kilimėliai"
+      },
       "editVenue": "Redaguoti Vietą",
       "venueNameRequired": "Vietos pavadinimas yra privalomas",
       "emailRequired": "El. paštas yra privalomas",
